# nnugens

./: CMakeLists.txt  README.md  quickvis.py
EvoPlast/: EvoPlast.cpp  EvoPlast.sc  EvoPlast1.scd
source/: EvoPlast.sc  Reservoir.cpp  Reservoir.sc  Reservoir.scd
